--- a/src/app/board/field/field.component.scss
+++ b/src/app/board/field/field.component.scss
@@ -6,6 +6,7 @@
   background-color: rgb(230, 128, 120);
   border: 1px solid rgb(204, 124, 117);
   box-sizing: border-box;
+  user-select: none;
 }
 
 .field:hover {
