outputs from board, export from app to game component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-board [level]="selectedLevel"></app-board>
+<!-- <app-board [level]="selectedLevel" (onGameStateChange)="updateGameState($event)"></app-board> -->
+<app-game></app-game>
