--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="boardReady" class="board">
   <div *ngFor="let row of matrix; let r = index" class="board-row">
-    <div *ngFor="let col of row; let c = index" class="board-col" (click)="onPlayerClick($event, r, c)" (contextmenu)="onPlayerRightClick($event)">
-      <app-field [values]="col.value" [squareSize]="35"></app-field>
+    <div *ngFor="let field of row; let c = index" class="board-field" (click)="onPlayerClick($event, field)" (contextmenu)="onPlayerRightClick($event, field)">
+      <app-field [value]="field.value" [marked]="field.marked" [discovered]="field.discovered" [squareSize]="35"></app-field>
     </div>
   </div>
 </div>
