--- a/src/app/board/field/field.component.scss
+++ b/src/app/board/field/field.component.scss
@@ -7,8 +7,24 @@
   border: 1px solid rgb(204, 124, 117);
   box-sizing: border-box;
   user-select: none;
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #252525;
 }
 
 .field:hover {
   background-color: lightgreen;
+}
+
+.value-discovered {
+  background-color: rgb(231 154 148);
+}
+
+.value-not-discovered {
+  background-color: rgb(230, 128, 120);
+}
+
+.value-marked {
+  color: Red;
 }
