--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   padding: 2.5rem;
-  background-color: lightblue;
+  background-color: #483e48;
 
   .board {
     padding-right: 2rem;
