--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,7 +1,7 @@
 .board {
   display: flex;
   flex-direction: column;
-  background-color: pink;
+  // background-color: pink;
 
   .board-row {
     display: flex;
@@ -11,7 +11,7 @@
       display: flex;
       justify-content: center;
       text-align: center;
-      background-color: lightblue;
+      background-color: silver;
       // padding: 10px;
       cursor: default;
     }
