--- a/src/app/board/field/field.component.scss
+++ b/src/app/board/field/field.component.scss
@@ -15,13 +15,18 @@
 }
 
 .field:hover {
-  // background-color: lightgreen;
-  // border: 1px solid yellow;
-  // border-radius: 5px;
-  background-color: #a6c300;
   border-radius: 8px;
-  opacity:0.7 !important;
+  border: 1px solid rgb(255, 255, 0);
 }
+
+.field-hint {
+  border: 1px rgb(255, 255, 0) solid;
+
+  animation: blink 1s;
+  // animation-iteration-count: 3;
+}
+
+@keyframes blink { 50% { border-color:#fff ; }  }
 
 .value-discovered {
   background-color: rgb(231 154 148);
