--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,6 +1,7 @@
 .game {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   position: absolute;
   background-color: #483e48;
   height: 100%;
@@ -17,5 +18,8 @@
   .score {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #50474e;
   }
 }
