new game, menu, fixes

--- a/src/app/board/field/field.component.html
+++ b/src/app/board/field/field.component.html
@@ -1,6 +1,6 @@
 <div class="field" [style.width.px]="squareSize" [style.height.px]="squareSize">
-<!-- <div class="field" [style.width.px]="squareSize" [style.height.px]="squareSize" style="opacity: 0.2" [title]="'value: ' + value"> -->
-  <!-- <div class="test" style="position: absolute; width: 30px; text-align: center">{{ value }}</div> -->
+<!-- <div class="field" [style.width.px]="squareSize" [style.height.px]="squareSize" style="opacity: 0.2" [title]="'value: ' + value">
+  <div class="test" style="position: absolute; width: 30px; text-align: center">{{ value }}</div> -->
   <img [src]="imageFile"/>
   <!-- <div *ngIf="discovered">
     <span *ngIf="value !== 0">{{ value }}</span>
