--- a/src/app/board/field/field.component.scss
+++ b/src/app/board/field/field.component.scss
@@ -1,3 +1,7 @@
+img {
+  pointer-events: none;
+}
+
 .field {
   display: flex;
   flex-direction: column;
@@ -12,6 +16,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   color: #252525;
+  user-select: none;
 }
 
 .field:hover {
