some little fixes and transformed assets to optimized quality files

--- a/src/app/board/field/field.component.html
+++ b/src/app/board/field/field.component.html
@@ -1,3 +1,5 @@
 <div class="field" [style.width.px]="squareSize" [style.height.px]="squareSize">
   <img [src]="imageFile"/>
+  <!-- debug -->
+  <!-- <span [ngStyle]="{'color': discovered ? 'red' : 'yellow' }">{{value}}</span> -->
 </div>
