change assets, remove menu, debugMode, storage and more

--- a/src/app/board/field/field.component.html
+++ b/src/app/board/field/field.component.html
@@ -1,5 +1,6 @@
 <div class="field" [style.width.px]="squareSize" [style.height.px]="squareSize">
   <img [src]="imageFile"/>
   <!-- debug -->
-  <!-- <span [ngStyle]="{'color': discovered ? 'red' : 'yellow' }">{{value}}</span> -->
+  <div [style.width.px]="squareSize" [style.height.px]="squareSize" [ngStyle]="{'color': discovered ? 'red' : 'yellow', 'visibility': debug ? 'visible' : 'hidden' }" style="position: absolute; display: flex; align-items: center; justify-content: center">{{ value }}</div>
+  <img src="assets/gfx/selected1.png" style="position: absolute;" [style.height.px]="squareSize" [ngStyle]="{'display': hover ? 'block' : 'none'}" />
 </div>
