--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,80 +1,15 @@
+$hudcolor: #f08080;
+
 .container {
   position: absolute;
   width: 100%;
   height: 100%;
 
-  .score {
+  .blackened {
     position: absolute;
-    top: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
     width: 100%;
-    background-color: #41393f;
-    border-bottom: 1px solid #272125;
-    cursor: default;
-    text-shadow: 2px 2px #2c0c0c;
-    user-select: none;
-    z-index: 2;
-  }
-
-  .score span {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-
-  .dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    text-shadow: 2px 2px #2c0c0c;
-  }
-
-  .score span.active:hover, .dropdown:hover .dropbtn {
-    cursor: pointer;
-    background-color: rgb(99, 99, 99);
-  }
-
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #50474e;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-
-  .dropdown-content span {
-    float: none;
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-  .dropdown-content span:hover {
-    background-color: rgb(99, 99, 99);
-    cursor: pointer;
-  }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.534);
   }
 
   .game {
@@ -88,19 +23,82 @@
     justify-content: center;
     align-items: center;
 
+    .score2 {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      position: relative;
+      height: 25px;
+      // width: 100%;
+      font-family: PressStart;
+      font-size: 18px;
+      padding-bottom: 1rem;
+      gap: 1.5rem;
+
+      .score2-mines, .score2-time {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-align: center;
+        cursor: default;
+        user-select: none;
+
+        .score2-toggle-lvl:hover {
+          color: yellow;
+          text-decoration: underline;
+          cursor: pointer;
+        }
+      }
+
+      .score2-face {
+        cursor: pointer;
+      }
+
+      .score2-mines, .score2-time {
+        color: $hudcolor;
+      }
+    }
+
+    .score2-levels {
+      display: flex;
+      justify-content: space-between;
+      // visibility: hidden;
+      gap: 1rem;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    .score2-levels > *:hover {
+      color: $hudcolor;
+    }
+
     .board {
       padding: 0.5rem;
       background-color: #50474e;
-      border-radius: 5px;
+      // border-radius: 5px;
     }
 
     // ---
 
     .message {
       position: absolute;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
       font-weight: bold;
       font-size: 1.2rem;
       text-shadow: 2px 2px #2c0c0c;
+      background-color: #483e48;
+      padding: 1rem;
+      z-index: 9;
+      border: 1px solid #000000;
+
+      > span:hover {
+        cursor: pointer;
+        color: $hudcolor;
+      }
     }
 
     .debug {
@@ -110,7 +108,7 @@
     }
 
     .no-more-events, .message, .board {
-      pointer-events: none;
+      // pointer-events: none;
       user-select: none;
     }
   }
