--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,5 +1,3 @@
-$hudcolor: #f08080;
-
 .container {
   position: absolute;
   width: 100%;
@@ -17,7 +15,7 @@ $hudcolor: #f08080;
     flex-direction: column;
     gap: 1rem;
     position: absolute;
-    background-color: #483e48;
+    background-color: var(--primary-bgcolor);
     height: 100%;
     width: 100%;
     justify-content: center;
@@ -56,7 +54,7 @@ $hudcolor: #f08080;
       }
 
       .score2-mines, .score2-time {
-        color: $hudcolor;
+        color: var(--primary-hudcolor);
       }
     }
 
@@ -70,7 +68,7 @@ $hudcolor: #f08080;
     }
 
     .score2-levels > *:hover {
-      color: $hudcolor;
+      color: var(--primary-hudcolor);
     }
 
     .board {
@@ -90,14 +88,14 @@ $hudcolor: #f08080;
       font-weight: bold;
       font-size: 1.2rem;
       text-shadow: 2px 2px #2c0c0c;
-      background-color: #483e48;
+      background-color: var(--primary-bgcolor);
       padding: 1rem;
       z-index: 9;
       border: 1px solid #000000;
 
       > span:hover {
         cursor: pointer;
-        color: $hudcolor;
+        color: var(--primary-hudcolor);
       }
     }
 
