--- a/src/app/loader/loader.component.scss
+++ b/src/app/loader/loader.component.scss
@@ -24,18 +24,14 @@ $item-height: 50px;
   user-select: none;
 
   > .progress {
-    // display: flex;
-    // align-items: center;
     position: relative;
     width: 100%;
     height: 100%;
 
 
     > .bar {
-      // position: absolute;
       display: flex;
       width: 100%;
-      // height: 100%;
       height: 50px;
       background-color: var(--primary-hudcolor);
       text-overflow: ellipsis;
@@ -55,7 +51,7 @@ $item-height: 50px;
   > .item {
     width: $item-width;
     height: $item-height;
-    background-color: blue;
+    border-left: 1px solid #000000;
 
     > * {
       width: inherit;
