--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,44 +1,65 @@
 <div class="container">
   <app-loader *ngIf="!loaded" (onLoaded)="assetsLoaded($event)"></app-loader>
   <div *ngIf="loaded" class="game">
-  <div class="topnav">
+    <div class="topnav">
       <div class="topnav-mines">
-        <div class="topnav-mines-top">
-          MINES
-        </div>
+        <div class="topnav-mines-top">MINES</div>
         <div class="topnav-mines-bottom">{{ score.mines }}</div>
-        <!-- <span class="topnav-toggle-lvl" (click)="toggleMenuLevel()">Menu Levels</span> -->
-        <!-- <span>{{ timer.count }}</span> -->
       </div>
 
       <div class="topnav-flagmode">
-        <extrabutton imageName="flag-lg" imageHoverName="flag-lg-down" (onClick)="toggleFlagMode()" [toggleMode]="true"></extrabutton>
+        <extrabutton
+          imageName="flag-lg"
+          imageOnDownName="flag-lg-down"
+          (onClick)="toggleFlagMode()"
+          [toggleMode]="true"
+        ></extrabutton>
       </div>
       <div class="topnav-face">
-        <extrabutton [imageName]="face.currentFaceFilename" imageHoverName="face-smile-down" (onClick)="toggleMenuLevel()"></extrabutton>
+        <extrabutton
+          [imageName]="face.currentFaceFilename"
+          imageOnDownName="face-smile-down"
+          (onClick)="toggleMenuLevel()"
+        ></extrabutton>
       </div>
       <div class="topnav-tablescore">
-        <extrabutton imageName="score" imageHoverName="score-down" (onClick)="toggleTableScore()"></extrabutton>
+        <extrabutton
+          imageName="score"
+          imageOnDownName="score-down"
+          (onClick)="toggleTableScore()"
+        ></extrabutton>
       </div>
 
       <div class="topnav-time">
-        <div class="topnav-time-top">
-          TIME
-        </div>
+        <div class="topnav-time-top">TIME</div>
         <div class="topnav-time-bottom">
           {{ timer.count }}
         </div>
       </div>
     </div>
-      <div class="topnav-levels" [ngStyle]="{'visibility': displayMenu ? 'visible' : 'hidden'}">
-        <span *ngFor="let item of menuLevels()" (click)="onClickSelectLevel(item.id)">{{ item.id }}</span>
-      </div>
+    <div
+      class="topnav-levels"
+      [ngStyle]="{ visibility: displayMenu ? 'visible' : 'hidden' }"
+    >
+      <span
+        *ngFor="let item of menuLevels()"
+        (click)="onClickSelectLevel(item.id)"
+        >{{ item.id }}</span
+      >
+    </div>
     <div *ngIf="messageEnabled" class="message">
       {{ message }}
       <span (click)="onClickNewGame()">Play again?</span>
     </div>
 
-    <div class="board" [ngStyle]="{'pointer-events': ['LOSE','WIN'].includes(global.gameState) ? 'none' : 'all'}">
+    <div
+      class="board"
+      [ngStyle]="{
+        'pointer-events': ['LOSE', 'WIN'].includes(global.gameState)
+          ? 'none'
+          : 'all'
+      }"
+    >
       <app-board
         [level]="selectedLevel"
         (onGameStateChange)="updateGameState($event)"
@@ -49,4 +70,3 @@
 
   <!-- <div class="blackened"></div> -->
 </div>
-
